[package]
name = "tcp-latency-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
packet-builder = "0.6.0"
default-net = "0.11.0"
portpicker = "0.1.1"
clap = { version = "3.2.16", features = ["yaml", "derive"] }
dns-lookup = "1.0.8"
[dependencies.pnet]
version = "0.30.0"